# piper-phonemize

./: .gitignore  BUILDING.md  CMakeLists.txt  setup.py  windows-dev.md
.github/workflows/: build-wheel-linux.yaml  build-wheel-macos-x86_64.yaml
include/piper-phonemize/: phoneme_ids.hpp  phonemize.hpp  shared.hpp  tashkeel.hpp  uni_algo.h
share/espeak-ng-data/: ja_dict  ko_dict  kok_dict  my_dict  shn_dict  th_dict  vi_dict
src/: phoneme_ids.hpp  phonemize.cpp  uni_algo.h
